--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,18 +1,21 @@
-﻿timezone = 9
+timezone = 9
 
 voicechannel = 
 textchannel = 
 ladderchannel = 
 jungsanchannel = 
+killchannel = 
+racingchannel = 
 
 before_alert = 1
-before_alert1 = 2
+before_alert1 = 5
 mungChk = 10
+delmungcnt = 20
 
 bossInfoNum = 3
 
 restarttime = 04:30
-restartPeriod = 0
+restartPeriod = 1
 
 file_name = 
 jsonname = 
