--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,11 +1,12 @@
 timezone = 9
 
-voicechannel = 681708150898163756
-textchannel = 681707821879787534
+voicechannel = 
+textchannel = 
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
 racingchannel = 
+itemchannel = 
 
 before_alert = 1
 before_alert1 = 5
