--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 655809895840612352
 textchannel = 655791015160184851
 ladderchannel = 
 jungsanchannel = 
