--- a/test_setting.ini
+++ b/test_setting.ini
@@ -5,7 +5,7 @@ textchannel = 476393938836783126
 ladderchannel = 655986108806594560
 jungsanchannel = 
 killchannel = 
-racingchannel = 
+racingchannel = 655986108806594560
 itemchannel = 
 
 before_alert = 1
