--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,11 +1,11 @@
 timezone = 9
 
-voicechannel = 681020039272595649
-textchannel = 476393938836783126
-ladderchannel = 655986108806594560
+voicechannel = 503909372511125508
+textchannel = 552122574855864321
+ladderchannel = 
 jungsanchannel = 
 killchannel = 
-racingchannel = 655986108806594560
+racingchannel = 
 itemchannel = 
 
 before_alert = 1
