--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,7 +2,7 @@ timezone = 9
 
 voicechannel = 681020039272595649
 textchannel = 476393938836783126
-ladderchannel = 
+ladderchannel = 655986108806594560
 jungsanchannel = 
 killchannel = 
 racingchannel = 
