--- a/test_setting.ini
+++ b/test_setting.ini
@@ -4,7 +4,7 @@ voicechannel = 681020039272595649
 textchannel = 476393938836783126
 ladderchannel = 655986108806594560
 jungsanchannel = 
-killchannel = 
+killchannel = 476393938836783126
 racingchannel = 655986108806594560
 itemchannel = 
 
