--- a/test_setting.ini
+++ b/test_setting.ini
@@ -6,7 +6,7 @@ ladderchannel = 655986108806594560
 jungsanchannel = 
 killchannel = 476393938836783126
 racingchannel = 655986108806594560
-itemchannel = 
+itemchannel = 754880601265274962
 
 before_alert = 1
 before_alert1 = 5
