--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,12 +1,12 @@
 timezone = 9
 
-voicechannel = 681020039272595649
-textchannel = 476393938836783126
-ladderchannel = 655986108806594560
+voicechannel = 503909372511125508
+textchannel = 552122574855864321
+ladderchannel = 
 jungsanchannel = 
-killchannel = 476393938836783126
-racingchannel = 655986108806594560
-itemchannel = 754880601265274962
+killchannel = 
+racingchannel = 
+itemchannel = 
 
 before_alert = 1
 before_alert1 = 5
@@ -23,3 +23,5 @@ jsonname =
 sheetname = 
 inputcell = 
 outputcell = 
+
+voice_use = 1
