--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
-voicechannel = 681020039272595649
-textchannel = 476393938836783126
+voicechannel = 503909372511125508
+textchannel = 552122574855864321
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
@@ -10,7 +10,8 @@ itemchannel =
 
 before_alert = 1
 before_alert1 = 5
-mungChk = 10
+mungChk1 = 10
+mungChk2 = 10
 delmungcnt = 5
 
 bossInfoNum = 3
