--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
-voicechannel = 
-textchannel = 
+voicechannel = 503909372511125508
+textchannel = 552122574855864321
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
