--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,7 +1,7 @@
 timezone = 9
 
-voicechannel = 659586960121135138
-textchannel = 659586960121135137
+voicechannel = 
+textchannel = 
 ladderchannel = 
 jungsanchannel = 
 killchannel = 
@@ -12,7 +12,7 @@ before_alert = 1
 before_alert1 = 5
 mungChk1 = 10
 mungChk2 = 10
-delmungcnt = 5
+delmungcnt = 20
 
 bossInfoNum = 3
 
