--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 659586960121135138
 textchannel = 659586960121135137
 ladderchannel = 
 jungsanchannel = 
