--- a/test_setting.ini
+++ b/test_setting.ini
@@ -6,7 +6,7 @@ ladderchannel =
 jungsanchannel = 
 killchannel = 
 racingchannel = 
-itemchannel = 
+itemchannel = 693346149100290078
 
 before_alert = 1
 before_alert1 = 5
