--- a/test_setting.ini
+++ b/test_setting.ini
@@ -2,7 +2,7 @@ timezone = 9
 
 voicechannel = 693346335893487616
 textchannel = 693343948357369857
-ladderchannel = 
+ladderchannel = 693346149100290078
 jungsanchannel = 
 killchannel = 
 racingchannel = 
