--- a/test_setting.ini
+++ b/test_setting.ini
@@ -5,7 +5,7 @@ textchannel = 693343948357369857
 ladderchannel = 693346149100290078
 jungsanchannel = 
 killchannel = 
-racingchannel = 
+racingchannel = 693346149100290078
 itemchannel = 693346149100290078
 
 before_alert = 1
