--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,12 +1,12 @@
 timezone = 9
 
-voicechannel = 693346335893487616
-textchannel = 693343948357369857
-ladderchannel = 693346149100290078
+voicechannel = 
+textchannel = 
+ladderchannel = 
 jungsanchannel = 
 killchannel = 
-racingchannel = 693346149100290078
-itemchannel = 693346149100290078
+racingchannel = 
+itemchannel = 
 
 before_alert = 1
 before_alert1 = 5
