--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 862336135317422090
 textchannel = 862294817336852500
 ladderchannel = 
 jungsanchannel = 
