--- a/test_setting.ini
+++ b/test_setting.ini
@@ -5,7 +5,7 @@ textchannel = 862294817336852500
 ladderchannel = 862336076348653598
 jungsanchannel = 
 killchannel = 
-racingchannel = 
+racingchannel = 862336076348653598
 itemchannel = 862336076348653598
 
 before_alert = 1
