--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,12 +1,12 @@
 timezone = 9
 
-voicechannel = 959632715928440863
-textchannel = 959632156668358696
-ladderchannel = 959937175569432666
+voicechannel = 
+textchannel = 
+ladderchannel = 
 jungsanchannel = 
 killchannel = 
-racingchannel = 959937175569432666
-itemchannel = 959937175569432666
+racingchannel = 
+itemchannel = 
 
 before_alert = 1
 before_alert1 = 5
